# agent-memory-hub

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  benchmark_db.py  implementation_plan.md  index.html  lint_errors.txt  lint_report.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  task.md  verify_pypi.py
.github/workflows/: ci.yml  docs.yml  publish.yml
agent_memory_hub/: __init__.py
agent_memory_hub/client/: memory_client.py
agent_memory_hub/config/: alloydb_config.py  redis_config.py  regions.py
agent_memory_hub/control_plane/: region_contract.py  region_guard.py
agent_memory_hub/data_plane/: adk_session_store.py  alloydb_session_store.py  firestore_session_store.py  redis_session_store.py  store_factory.py
agent_memory_hub/models/: __init__.py  base.py  types.py
agent_memory_hub/routing/: memory_router.py
agent_memory_hub/utils/: telemetry.py  ttl_manager.py
architecture/: index.html
articles/: building_stateful_rag.md  scaling_ai_agents.md
benchmarking/: index.html
contributing/: index.html
docs/: architecture.md  benchmarking.md  contributing.md  index.md  publishing.md  security_access.md  semantic_models.md
docs/guides/: multi_region.md  openai_integration.md  (+1 more)
examples/: alloydb_example.py  basic_agent_usage.py  firestore_example.py  multi_region_memory_architecture.py  openai_agents_integration.py  rag_agent_with_region_memory.py  redis_example.py  semantic_memory_example.py  ttl_example.py
publishing/: index.html
scripts/: README.md  pre_commit_test.py  verify_semantic.py
search/: search_index.json
security_access/: index.html
semantic_models/: index.html
tests/: manual_test_env.py  test_adk_session_store.py  test_alloydb_ttl.py  test_client_semantic.py  test_error_handling.py  test_firestore_store.py  test_integration.py  test_memory_client.py  test_memory_router.py  test_redis_store.py  test_region_guard.py  test_semantic_models.py  test_store_factory_env.py  test_telemetry.py  verify_alloydb_connector.py
(+9 files in other folders)
