[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-hub"
version = "0.3.0"
description = "Enterprise-grade agent memory management solution with region governance."
readme = "README.md"
authors = [
  { name = "Agent Memory Hub Maintainers", email = "maintainers@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "google-cloud-storage>=2.0.0",
    "tenacity>=8.0.0",
    "opentelemetry-api>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/example/agent-memory-hub"
"Bug Tracker" = "https://github.com/example/agent-memory-hub/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "bandit>=1.7.0",
    "opentelemetry-sdk>=1.20.0",
]
alloydb = [
    "google-cloud-alloydb-connector>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["agent_memory_hub*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "S"]
ignore = []
    
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=agent_memory_hub"
testpaths = [
    "tests",
]
